# oop_git

./: CMakeLists.txt  ReadMe.txt  run_lab2.ps1
labs2/: Characters1.cpp  Characters1.h  main.cpp
labs2-4/: Characters1.cpp  Characters1.h  main.cpp
labs2-4/classes/: BossEnemy.cpp  BossEnemy.h  Character.cpp  Character.h  Inventory.cpp  Inventory.h  MainHero.cpp  MainHero.h  Npc.cpp  Npc.h  Villager.cpp  Villager.h  WarriorHero.h
labs2-5/classes/: BossEnemy.cpp  Character.cpp  Character.h  Enemy.h  MainHero.cpp  Villager.cpp  WarriorHero.h
labs2_5/: main.cpp
labs2_5/classes/: AbilityUser.h  BossEnemy.cpp  BossEnemy.h  Character.cpp  Character.h  Enemy.cpp  Inventory.cpp  Inventory.h  MainHero.cpp  MainHero.h  Npc.cpp  Npc.h  Villager.cpp  Villager.h  WarriorHero.cpp
labs3/: car.cpp  carmain.cpp  made.cpp  made.h
labs4/: cars.cpp  vehicle.cpp  vehicle.h
